objects/RTAT_Wafer_and_Module_Test_Time__c.object
<CustomObject>
    <description>cycle time in days for WFT and MFT</description>
    <fields>
        <fullName>CYCLE_TIME_IN_DAYS__c</fullName>
        <label>Cycle Time in Days</label>
        <precision>2</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPEED__c</fullName>
        <description>ROCKET
TURBO
RAMP
NTAT</description>
        <label>SPEED</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ROCKET</fullName>
                </value>
                <value>
                    <fullName>TURBO</fullName>
                </value>
                <value>
                    <fullName>RAMP</fullName>
                </value>
                <value>
                    <fullName>NTAT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <label>Technology</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Tier__c</fullName>
        <description>0, 1 or 2</description>
        <label>Test Tier</label>
        <precision>1</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Test_Type__c</fullName>
        <label>Test Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>WAFER</fullName>
                </value>
                <value>
                    <fullName>MODULE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>RTAT Wafer and Module Test Time</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Technology__c</columns>
        <columns>SPEED__c</columns>
        <columns>CYCLE_TIME_IN_DAYS__c</columns>
        <columns>Test_Tier__c</columns>
        <columns>Test_Type__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>FT-{0000}</displayFormat>
        <label>RTAT Wafer and Module Test Time Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RTAT Wafer and Module Test Times</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>